--- a/eureka-local.yml
+++ b/eureka-local.yml
@@ -4,4 +4,4 @@ eureka:
     leaseExpirationDurationInSeconds: 10
   client:
     service-url:
-      defaultZone: http://eureka-1:8761/eureka/, http://eureka-2:8762/eureka/
+      defaultZone: http://localhost:8761/eureka/, http://localhost:8762/eureka/
