feat: add circuitbreaker

--- a/api-A-local.yml
+++ b/api-A-local.yml
@@ -2,52 +2,30 @@ imports:
   - { resource : ./eureka-local.yml}
   - { resource : ./zipkin-local.yml}
 
-service:
-  name: app-service-touch
-
 management:
-  endpoint:
-    health:
-      enabled: true
-      show-details: always
-    shutdown:
-      enabled: true
   endpoints:
     web:
       exposure:
-        include: '*'
-
-hystrix:
-  groupKey: system
-  fallbackMethod: brekaer
-  enabled: true
-  threadpool:
-    default:
-      coreSize: 50
-      maximumSize: 500
-      keepAliveTimeMinutes: 1
-      allowMaximumSizeToDivergeFromCoreSize: true
-    custom-th:
-      coreSize: 20
-      maximumSize: 40
-      keepAliveTimeMinutes: 1
-      allowMaximumSizeToDivergeFromCoreSize: true
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 100000
-      circuitBreaker:
-        requestVolumeThreshold: 2
-        errorThresholdPercentage: 50
+        include: health, metrics, prometheus
+  metrics:
+    export:
+      prometheus:
         enabled: true
-    custom-cm:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 10000
-      circuitBreaker:
+        
+resilience4j:
+  circuitbreaker:
+    configs:
+      default:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10000ms
+    instances:
+      apiService:
+        base-config: default
+        slidingWindowSize: 20
+        failureRateThreshold: 60
         requestVolumeThreshold: 2
         errorThresholdPercentage: 50
         sleepWindowInMilliseconds: 5000
